# stage0_search_api

./: Dockerfile  HISTORY.md  Pipfile  README.md  pyproject.toml
.github/workflows/: docker-push.yml
docs/: index.html  openapi.yaml
source/: server.py
source/routes/: search_routes.py  sync_routes.py
source/services/: search_services.py  sync_services.py
source/utils/: elastic_utils.py  mongo_utils.py
src/: __init__.py  server.py
src/routes/: health_routes.py  search_routes.py  sync_routes.py
src/services/: search_services.py  sync_services.py
src/utils/: elastic_utils.py  mongo_utils.py
tests/config/: test_mongo_collection_names.py
tests/routes/: test_health_routes.py  test_search_routes.py  test_sync_routes.py
tests/services/: __init__.py  test_search_services.py  test_sync_services.py
tests/stepci/: search_api.yaml
