[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage0_search_api"
version = "0.1.0"
description = "A polymorphic search API for stage0 microservices"
authors = [{name = "Mike Storey", email = "devs@agile-learning.institute"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "pymongo", 
    "elasticsearch",
    "stage0-py-utils>=0.2.5"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html" 